# pyroll-shida-flow-stress

./: README.md  hatch.toml  pyproject.toml
docs/: docs.tex  refs.bib
pyroll/: shida_flow_stress.py
tests/: test_hook.py  test_solve.py
